# sofetch

./: Cargo.toml  README.md
src/: .main.rs.rustfmt  main.rs
