[package]
name = "sofetch"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = "4.0.0"
whoami = "1.5.1"

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
debug = false
opt-level = 3
